--- a/css/contato.css
+++ b/css/contato.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 * {
     margin: 0;
     padding: 0;
@@ -8,7 +7,7 @@
 }
 
 header {
-    background: #5167b2;
+    background: #FF8C00;
 }
 
 .headerBtnGroup {
@@ -22,9 +21,9 @@ a {
 
 .navBtn {
     border-radius: 25px;
-    background-color: #ddd;
+    background-color: #ffffff;
     border: none;
-    color: black;
+    color: rgb(62, 61, 61);
     padding: 10px 20px;
     text-align: center;
     text-decoration: none;
@@ -35,34 +34,44 @@ a {
 }
 
 .navBtn:hover {
-    background-color: #b8b8b8;
+    background-color: #e8e2e2;
 }
 
 .container-body {
     display: flex;
-    height: 70%;
-    justify-content: center;
-    align-items: center;
+    height: 50;
+    /* justify-content: center; */
+    /* align-items: center; */
     padding: 10px;
     background: #ffffff;
+     /*  muda a cor on de se encontra os input*/
     flex-direction: column;
     row-gap: 40px;
+    width: 800px;
+    text-align: center;
+    /* flex-direction: column; */
+    margin: auto;
+    border-color: #FF8C00;
+    box-shadow: 1px 3px 8px 4px #FF8C00;
+    margin-bottom: 60px;
+    margin-top: 60px;
+    border-radius: 20px;
 }
 
+
 .container {
-    width: 100%;
-    max-width: 800px;
-    border-style: solid;
+    /* width: 100%; */
+    /* max-width: 80px;  */
+    /* border-style: solid; */
     background: #ffffff;
-    padding: 25px 30px;
-    border-radius: 25px;
-    border-style: solid;
-    border-width: 1px;
-    border-color: #6679bd;
+    /* padding: 25px 30px; */
+    /* border-radius: 25px;
+    border-style: solid; */
+    border-color: #000000;
 }
 
 .container .title {
-    font-size: 25px;
+    font-size: 24px;
     position: relative;
 }
 
@@ -72,20 +81,22 @@ a {
 }
 
 form .campos .input-box {
-    width: calc(100% / 2 - 20px);
+    width: calc(89% / 2 - 20px);
     margin: 10px;
+    box-shadow: 5px 5px 5px  #FF8C00;
+    background-color:  #FF8C00;
+    
 }
 
 .campos .input-box input {
     height: 50px;
     width: 100%;
-    box-shadow: 2px 2px 2px rgb(196, 196, 196);
+    box-shadow: 5px 2px 5px  #999797;
     border: none;
     border-radius: 5px;
-    background-color: #bed4f9;
-
+    background-color:  #FF8C00;
+    margin: auto;
 }
-
 
 input[type="text"],
 input[type="telefone"],
@@ -94,18 +105,21 @@ textarea,
 textarea::placeholder,
 input::placeholder {
     font-size: large;
-    padding: 10px;
+    padding: 5px;
+    background-color:  #FF8C00;
+    
 }
 
 .campos .input-box textarea {
-
     resize: none;
-    height: 100px;
+    height: 60px;
     width: 100%;
-    box-shadow: 2px 2px 2px rgb(196, 196, 196);
+    box-shadow: 2px 2px 2px rgb #000000;
+    ;
     border: none;
     border-radius: 5px;
-    background-color: #bed4f9;
+    background-color:  #FF8C00;
+    margin: auto;
 }
 
 form .button {
@@ -116,36 +130,37 @@ form .button {
 form .button button {
     height: 100%;
     width: 100%;
-    box-shadow: 2px 2px 2px rgb(196, 196, 196);
-    border: none;
+    box-shadow: 5px 5px 5px  #FF8C00;
+    border-color: #FF8C00;
     border-radius: 5px;
     font-size: large;
     outline: none;
-    color: #ffff;
-    background: #6679bd;
+    color:  #FF8C00;
+    background:  #ffffff;
     letter-spacing: 2px;
     font-weight: 500;
     cursor: pointer;
 }
 
 form .button button:hover {
-    background-color: #86a0cc;
+    background-color:  #999797;
 }
 
 .contacts {
     width: 100%;
     max-width: 800px;
     border-style: solid;
-    background: #ffffff;
+    background: #FF8C00;
     padding: 25px 30px;
     border-radius: 25px;
     border-style: solid;
     border-width: 1px;
-    border-color: #6679bd;
+    border-color: #FF8C00;
     display: flex;
     flex-direction: column;
     row-gap: 30px;
     align-items: center;
+    box-shadow: 3.5px 3.5px 3.5px  #FF8C00;
 }
 
 .contact {
@@ -153,7 +168,7 @@ form .button button:hover {
     flex-direction: column;
     align-items: center;
     row-gap: 12px;
-    background-color: #f2f2f2;
+    background-color:  #FF8C00;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -170,14 +185,15 @@ form .button button:hover {
     .container {
         max-width: 100%;
     }
-
     .contacts {
         max-width: 100%;
     }
-
     form .campos .input-box {
         width: 100%;
         margin-bottom: 15px;
     }
+}
 
+.div-flex {
+    display: flex; align-items: center; justify-content: center;
 }
