--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 * {
     font-family: 'Poppins', sans-serif;
     padding: 0;
@@ -17,11 +16,12 @@
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     padding-top: 20px;
+    color: #D2691E;
 }
 
 .sectionDescription {
     text-align: center;
-    color: #383838;
+    color: #D2691E;
 }
 
 .gridContainer {
@@ -58,12 +58,12 @@
 }
 
 .categoryCard:hover {
-    border-color: #86a0cc;
+    border-color: #FF8C00;
 }
 
 .pag-link {
     text-decoration: none;
-    color: #292929;
+    color: #FF8C00;
 }
 
 .mainCategoryCardTitle {
@@ -72,12 +72,13 @@
 }
 
 .mainCategoryCardDescription {
+    font-size: 1rem;
     padding: 6px;
 }
 
 .sidebarContent {
-    background-color: #d5d9e7;
-    color: black;
+    background-color: #FF8C00;
+    color: rgb(255, 255, 255);
     padding: 16px;
     display: flex;
     flex-direction: column;
@@ -89,9 +90,10 @@
     display: flex;
     flex-direction: column;
     row-gap: 30px;
-    border: 2px solid #6679bd;
+    border: 5px solid #FF8C00;
     border-radius: 15px;
     flex-wrap: wrap;
+    box-shadow: 9px 2px 25px  #FF8C00;
 }
 
 .IMC {
@@ -99,8 +101,11 @@
     flex-direction: column;
     row-gap: 20px;
     padding-bottom: 20px;
-    background-color: #d5d9e7;
+    background-color: #FF8C00;
     flex-wrap: wrap;
+    /* box-shadow: 5px 5px 5 px lawngreen; */
+    /* border-radius: 50px; */
+    box-shadow:   #999797;
 }
 
 .sidebarCard {
@@ -122,47 +127,51 @@
     padding: 10px;
 }
 
+
+/* .sidebar {
+    color: #FF8C00;
+} */
+
 .sidebarCard:hover {
-    border-color: gainsboro;
+    border-color: rgb(255, 255, 255);
 }
 
-
 .btnCalcular {
-    background-color: #5167b2;
-    width: 72%;
-    padding: 10px;
+    background-color: #ffffff;
+    width: 80%;
+    padding: 2px;
     cursor: pointer;
     border-radius: 10px;
     border: none;
-    color: white;
+    color: #FF8C00;
     font-size: 20px;
+    margin: 10%;
 }
 
 .btnCalcular:hover {
-    background-color: #86a0cc;
+    background-color: #ffffff;
 }
 
 input {
     width: 100%;
     height: 40px;
-    box-shadow: 2px 2px 2px rgb(196, 196, 196);
+    box-shadow: 5px 5px 5px #FF8C00;
     border: none;
     border-radius: 5px;
-    background-color: #bed4f9;
+    background-color: #ffffff;
     padding: 6px;
+    color: #FF8C00;
+    
 }
 
 @media (max-width: 630px) {
     .gridContainer {
-        grid-template-areas:
-            "mainContent"
-            "sidebarContent";
+        grid-template-areas: "mainContent" "sidebarContent";
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 10px;
     }
-
     .footerAnchor {
         font-size: 19px;
     }
@@ -172,4 +181,47 @@ input {
     .sidebarContent {
         padding: 1px;
     }
+}
+
+.LGPD-center {
+
+    align-items: center;
+    padding: 20px 25px;
+    border-radius: 8px;
+    max-width: 1000px;
+    position: fixed;
+    z-index: 99999;
+    display: flex;
+    bottom: 150px;
+    width: 100%;
+    opacity: 80%;
+    gap: 45px;
+    background-color: #ffffff;
+    /* margin: auto; */
+    margin-left: 50%;
+    transform: translate(-50%);
+    justify-content: center;
+}
+
+.btnEnviar {
+    background-color:#f0f0f0;
+    width: 100%;
+    padding: 5px;
+    cursor: pointer;
+    border-radius: 10px;
+    border: none;
+    color: #FF8C00;
+    font-size: 22px;
+}
+
+.caixaBnt {
+    display: flex;
+    /* width: 100%; */
+    justify-content: space-around; /*diminuir o espaço do lado*/
+
+}
+
+.cor {
+    color:#343434 !important; /* deixa fixo qualquer coisa no important*/
+    
 }
