--- a/css/paginas.css
+++ b/css/paginas.css
@@ -1,7 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
-
-
-
 body {
     font-family: 'Poppins', sans-serif;
     background-color: rgb(221, 228, 245);
@@ -37,27 +34,55 @@ body {
     justify-content: center;
 }
 
-.categoryCard{
-    width: calc(100% - 20px);
+.categoryCard {
+    width: calc(100% - 80px);
     /* Ajuste a largura dos cards conforme necessário */
     margin: 10px;
     padding: 20px;
-    background-color: lightgrey;
-    border: 5px solid #5167b2;
+    background-color:  #FF8C00;
+    border: 5px solid #868892;
     text-align: center;
     box-sizing: border-box;
+    border-radius: 10px;
+    transition: 0.5s;
 }
 
 .mainCardImg {
     width: 100%;
     height: auto;
+    border-radius: 10px;
 }
 
 .mainCategoryCardTitle {
     font-size: 1.5rem;
     margin-bottom: 10px;
+    padding: 6px;
 }
 
 .mainCategoryCardDescription {
     font-size: 1rem;
+    padding: 6px;
+}
+
+.categoryCard:hover {
+    border-color: #4277672f;
+}
+
+.sidebarContent {
+    background-color:  #FF8C00;
+    color: black;
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 300px;
+    grid-area: sidebarContent;
+    gap: 20px;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 30px;
+    border: 2px solid #e44d4d1c;
+    border-radius: 15px;
+    flex-wrap: wrap;
 }
